# Geometria-Computacional

./: CMakeLists.txt  divisao_planar.cpp  functions.cpp
examples/: draw_points_2.cpp  draw_points_3.cpp  draw_vectors_3.cpp
tasks/: circle.cpp  create_points.cpp  display_image.cpp  divisao_planar.cpp  draw_triangle.cpp  fecho_convexo.cpp  functions.cpp  polygon_2_triangulate_good.cpp  startEndSplitMerge.cpp  visible_region.cpp
